added windows to Makefile targets; bump version number

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,16 +1,22 @@
-CC = g++
-SFLAGS = -Wall -Wextra -Wpedantic -std=c++20
-OFLAGS = -O3 -march=native -flto -DNDEBUG
-LFLAGS = -lpthread
+CXX = g++
+CXXFLAGS = -Wall -Wextra -Wpedantic -std=c++20
+CXXOPTFLAGS = -O3 -march=native -flto -DNDEBUG
+LDLIBS = -lpthread
+
 SRC = $(wildcard *.cpp)
 OBJ = $(SRC:.cpp=.o)
 BIN = neuromancer
 
+all: $(BIN)
+
 $(BIN): $(OBJ)
-	$(CC) $(OBJ) $(LFLAGS) -o $@
+	$(CXX) $(OBJ) $(LDLIBS) -o $@
 
 $(OBJ): %.o: %.cpp
-	$(CC) $(SFLAGS) $(OFLAGS) -c $<
+	$(CXX) $(CXXFLAGS) $(CXXOPTFLAGS) -c $<
+
+windows: CXX = x86_64-w64-mingw32-g++
+windows: all
 
 clean:
-	@rm -f $(OBJ) $(BIN)
+	@rm -f $(OBJ) $(BIN) $(BIN).exe
